# paracel

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  bootstrap.min.css  copyright  datagen.py  declmap.js  index.html  overview.markdown  paracel.js  paracelrun.py  params.json  prun.py  quickstart.html
alg/cbr/: CMakeLists.txt  cbr.hpp  cbr_cfg.json  cbr_driver.cpp  pre_handle.py
alg/clustering/: CMakeLists.txt  filter.cpp  kmeans.hpp  kmeans_cfg.json  kmeans_driver.cpp  sc.hpp  sc_cfg.json  sc_driver.cpp  update.cpp
alg/content_base_recommendation/: cbr.hpp  cbr_cfg.json  cbr_driver.cpp  update.cpp
alg/cos_sim_sparse/: CMakeLists.txt  cos_sim_sparse.cpp  cos_sim_sparse_cfg.json  update.cpp
alg/decision_tree_rec/: CMakeLists.txt  cfg.json  compact.py  driver.cpp  driver_serial.cpp  dtr.hpp  dtr_serial.hpp  xyexchange.py
alg/hi/: CMakeLists.txt  hi.hpp  hi_cfg.json  say_hi.cpp
alg/hostname/: CMakeLists.txt  hostname.cpp  update.cpp
alg/kmeans/: driver.cpp  kmeans.hpp  kmeans_cfg.json  update.cpp
alg/lasso/: CMakeLists.txt  cfg_serial.json  lasso_serial.cc  lasso_serial_old.cc
alg/logistic_regression/: CMakeLists.txt  lg.cpp  lg.hpp  lg_cfg.json  lg_driver.cpp  lg_ssp.cpp  update.cpp
alg/matrix_factorization/: CMakeLists.txt  filter.cpp  mf.hpp  mf_cfg.json  mf_driver.cpp  update.cpp
alg/max_vertex_value/: CMakeLists.txt  max_vertex_value.hpp  max_vertex_value_driver.cpp  max_vertex_value_pregel.cpp  mvv_cfg.json  update.cpp
alg/pagerank/: CMakeLists.txt  main.cpp  pr.hpp  pr_cfg.json  update.cpp
alg/perf_vs_mpi/: CMakeLists.txt  main.cpp  paracel_perf.hpp  update.cpp
alg/sgd/: sgd.cpp  sgd.hpp  sgd_cfg.json  sgd_driver.cpp  update.cpp
alg/similarity/: CMakeLists.txt  sim.hpp  sim_artist.hpp  sim_cfg.json  sim_douban.hpp  sim_driver.cpp  sim_tricky.hpp  update.cpp
alg/steady_state_inversion/: data_fmt.py
alg/tiny_url/: CMakeLists.txt  cfg.json  service.cpp  tiny_url.hpp
alg/wc/: update.cpp  wc.hpp  wc_driver.cpp
alg/word_count/: CMakeLists.txt  update.cpp  wc.hpp  wc_cfg.json  wc_driver.cpp
apps/sgd/: sgd.cpp  sgd.hpp
cmakes/: FindEigen.cmake  FindGFlags.cmake  FindMsgpackC.cmake  FindZeroMQ.cmake
dat/: a2.txt  d2.txt  g.txt  g2.txt  h.txt
demo/: a.txt  b.txt  c.txt  c2.txt  f.txt  unit.txt
include/: client.hpp  comm.hpp  graph.hpp  hash.hpp  kv.hpp  kv_def.hpp  load.hpp  packer.hpp  paracel_types.hpp  pregel.hpp  proxy.hpp  ps.cpp  ps.hpp  ring.hpp  server.hpp  utils.hpp
include/load/: loader.hpp  parser.hpp  partition.hpp  scheduler.hpp
include/pregel/: vertex.hpp
include/utils/: a.out  comm.hpp  comm.hpp.bak  decomp.hpp  ext_str_utils.hpp  ext_string.h  ext_utility.hpp  func_utility.hpp  hash.hpp  profile.hpp  split.hpp  test.cpp
result/: lg.html
src/: CMakeLists.txt  comm.cpp  default.cpp  local.cpp  paracelrun_cpp_proxy.cpp  ps.cpp  scheduler.cpp  start_server.cpp
test/: test_alltoall.cpp  test_comm.cpp  test_comm2.cpp  test_decomp.cpp  test_define.cpp  test_eigen.cpp  test_eigen_usage.cc  test_ext_utility.cpp  test_f_traits.cpp  test_frequent_dlopen.cpp  test_graph.cpp  test_hash.cpp  test_index_mapping.cpp  test_index_mapping2.cpp  test_init_client.cpp  test_init_client2.cpp  test_init_client3.cpp  test_init_client4.cpp  test_init_server.cpp  test_kv.cpp  test_loader.cpp  test_loader2.cpp  test_loader3.cpp  test_mf.cpp  test_mpi_perf.cpp  test_pack.cpp  test_packer.cpp  test_paracel_types.cpp  test_partition.cpp  test_paste.cpp  test_proxy.cpp  test_ps.cpp  test_reduce.cpp  test_ring.cpp  test_scheduler.cpp  test_utility.cpp  test_utils.cpp
test/serial/: cal_rmse.cpp  cbr.cpp  kmeans.cpp  lg.cpp  lg.py  logistic_regression.cpp  mf.cpp  mf_graph.py  mf_mapping.py  mix_ubias.cpp  mix_ufactor.cpp  random_projection.cc  sgd.cpp  sgd.py  similarity.cpp  test_WH.cc  test_eigenvector.cc
tool/: CMakeLists.txt  cfg_gLDA.json  cfg_lr_l1.json  kmeans_cfg.json  svd_cfg.json  svd_cfg2.json
